Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-6947

kudu: GetTableLocations RPC timing out with ASAN

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 2.13.0, Impala 3.1.0
    • Impala 2.13.0, Impala 3.1.0
    • Backend
    • None

    Description

      query_test/test_kudu.py:84: in test_kudu_insert
          self.run_test_case('QueryTest/kudu_insert', vector, use_db=unique_database)
      common/impala_test_suite.py:398: in run_test_case
          result = self.__execute_query(target_impalad_client, query, user=user)
      common/impala_test_suite.py:613: in __execute_query
          return impalad_client.execute(query, user=user)
      common/impala_connection.py:160: in execute
          return self.__beeswax_client.execute(sql_stmt, user=user)
      beeswax/impala_beeswax.py:173: in execute
          handle = self.__execute_query(query_string.strip(), user=user)
      beeswax/impala_beeswax.py:341: in __execute_query
          self.wait_for_completion(handle)
      beeswax/impala_beeswax.py:361: in wait_for_completion
          raise ImpalaBeeswaxException("Query aborted:" + error_log, None)
      E   ImpalaBeeswaxException: ImpalaBeeswaxException:
      E    Query aborted:Kudu error(s) reported, first error: Timed out: GetTableLocations { table: 'impala::test_kudu_insert_70eff904.kudu_test', partition-key: (HASH (a, b): 2), attempt: 1 } failed: GetTableLocations RPC to 127.0.0.1:7051 timed out after 10.000s (SENT)
      E   
      E   Key already present in Kudu table 'impala::test_kudu_insert_70eff904.kudu_test'. (1 of 3 similar)
      E   Error in Kudu table 'impala::test_kudu_insert_70eff904.kudu_test': Timed out: GetTableLocations { table: 'impala::test_kudu_insert_70eff904.kudu_test', partition-key: (HASH (a, b): 2), attempt: 1 } failed: GetTableLocations RPC to 127.0.0.1:7051 timed out after 10.000s (SENT) (1 of 21 similar)
      

      Attachments

        Activity

          People

            twmarshall Thomas Tauber-Marshall
            mikeb Michael Brown
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: