IMPALA-6947: Kudu tests flaky due to rpc timeout

Some Kudu tests occasionally fail due to hitting an rpc timeout when
running on a heavily loaded machine. For normal operation, having a
low timeout is good for noticing issues quickly, but for tests there's
no real reason we can't set this higher to avoid flakiness.

This patch adds a flag, -kudu_client_rpc_timeout_ms, disabled by
default. It also sets -kudu_client_rpc_timeout_ms to 60s for ASAN in
start-impala-cluster.py, higher than Kudu's default value of 10s.

Testing:
- Passed a full run of core tests on ASAN.

Change-Id: I8c4a2d87934cd4eb98509512f7060a596894ed53
Reviewed-on: http://gerrit.cloudera.org:8080/10466
Reviewed-by: Michael Brown <mikeb@cloudera.com>
Reviewed-by: Michael Ho <kwho@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>